--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@
   padding: 0;
   margin: 0;
 }
-body {
-  height: 50000px;
-}
 .mainSlider .main-content {
   min-height: 98vh;
   position: relative;
@@ -32,6 +29,22 @@ body {
   font-size: 3rem;
   margin-bottom: 1rem;
   text-align: center;
+}
+.mainSlider .main-content .content h2::before,
+.mainSlider .main-content .content h2::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 10px;
+  background-color: rgb(77, 194, 107);
+  top: 24px;
+  z-index: 7;
+}
+.mainSlider .main-content .content h2::before {
+  left: -75px;
+}
+.mainSlider .main-content .content h2::after {
+  right: -75px;
 }
 .mainSlider .main-content .content p {
   text-align: center;
@@ -73,7 +86,7 @@ body {
   border-style: none;
 }
 /* Animation */
-.fade-in-image {
+.fade-in-text {
   animation: fadeIn 3s;
   -webkit-animation: fadeIn 5s;
   -moz-animation: fadeIn 5s;
@@ -89,48 +102,12 @@ body {
     opacity: 1;
   }
 }
-
-@-moz-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-o-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 /* -------------------- */
 .h2-down {
   position: relative;
   top: 0px;
-  animation: moveDown 1s;
-  transition: 2s all ease-in-out;
+  animation: moveDown 3s;
+  transition: 0.3s all ease-in-out;
   /* animation-delay: 2s; */
 }
 
@@ -148,9 +125,8 @@ body {
 .button-up {
   position: relative;
   top: 0px;
-  animation: moveUp 4s;
+  animation: moveUp 6s;
   transition: 0.5s all ease-in-out;
-  /* animation-delay: 2s; */
 }
 
 @keyframes moveUp {
