--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    
 }
 .mainSlider .main-content {
     min-height: 98vh;
@@ -13,7 +14,7 @@
 .mainSlider .main-content img {
     position: absolute;
     width: 100%;
-    height: 98vh;
+    height: 100%;
     z-index: -1;
 }
 .mainSlider .main-content .content {
@@ -96,7 +97,47 @@
     -o-animation: fadeIn 5s;
     -ms-animation: fadeIn 5s;
 }
-
+@media (max-width: 768px) {
+    .mainSlider .main-content {
+        min-height: 70vh;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        background-color: #00000080;
+    }
+    .mainSlider .main-content .content h2 {
+        font-size: 2rem;
+    }
+    .mainSlider .main-content .content h2::before, 
+    .mainSlider .main-content .content h2::after {
+        width: 40px;
+        height: 6px;
+        top: 16px;
+    }
+    .mainSlider .main-content .content h2::before {
+        left: -50px;
+    }
+    .mainSlider .main-content .content h2::after {
+        right: -50px;
+    }
+    .mainSlider .main-content .content p {
+        font-size: 13px;
+    }
+    .mainSlider .main-content .content .btn-main {
+        padding: 10px 20px;
+        line-height: 1.2;
+    }
+    @keyframes moveDown {
+        0% {
+            top: -150px;
+            opacity: 0;
+        }
+        100% {
+            top: 0;
+            opacity: 1;
+        }
+    }
+}
 @keyframes fadeIn {
     0% {
         opacity: 0;
