--- a/main.css
+++ b/main.css
@@ -1,185 +1,187 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  font-family: serif;
 }
 .mainSlider .main-content {
-    min-height: 98vh;
+  min-height: 98vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background-color: #00000080;
+}
+.mainSlider .main-content img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.mainSlider .main-content .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 450px;
+}
+.mainSlider .main-content .content h2 {
+  font-weight: bold;
+  color: white;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.mainSlider .main-content .content h2::before,
+.mainSlider .main-content .content h2::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 10px;
+  background-color: rgb(77, 194, 107);
+  top: 24px;
+  z-index: 7;
+}
+.mainSlider .main-content .content h2::before {
+  left: -75px;
+}
+.mainSlider .main-content .content h2::after {
+  right: -75px;
+}
+.mainSlider .main-content .content p {
+  text-align: justify;
+  color: white;
+  line-height: 1.4;
+  font-weight: 600;
+}
+.mainSlider .main-content .content .btn-main {
+  margin-top: 2rem;
+  z-index: 34;
+  background-color: rgb(77, 194, 107);
+  font-family: Montserrat;
+  cursor: pointer;
+  outline: none;
+  box-shadow: none;
+  box-sizing: border-box;
+  height: auto;
+  width: auto;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  white-space: nowrap;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  text-align: center;
+  line-height: 26px;
+  letter-spacing: 0px;
+  font-weight: 700;
+  font-size: 20px;
+  border-color: transparent;
+  padding: 15px 45px 14px;
+  border-radius: 25px;
+  transform-origin: 172.285px 27.4902px;
+  opacity: 1;
+  transform: translate(0px, 0px);
+  visibility: visible;
+  border-width: 0px;
+  border-style: none;
+}
+.mainSlider .main-content .content .btn-main:hover {
+  background-color: rgb(48 143 73);
+}
+/* Animation */
+.fade-in-text {
+  animation: fadeIn 3s;
+  -webkit-animation: fadeIn 5s;
+  -moz-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+  -ms-animation: fadeIn 5s;
+}
+@media (max-width: 768px) {
+  .mainSlider .main-content {
+    min-height: 70vh;
     position: relative;
     display: flex;
     justify-content: center;
     background-color: #00000080;
-}
-.mainSlider .main-content img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-.mainSlider .main-content .content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    max-width: 450px;
-}
-.mainSlider .main-content .content h2 {
-    font-weight: bold;
-    color: white;
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    text-align: center;
-}
-.mainSlider .main-content .content h2::before,
-.mainSlider .main-content .content h2::after {
-    content: "";
-    position: absolute;
-    width: 50px;
-    height: 10px;
-    background-color: rgb(77, 194, 107);
-    top: 24px;
-    z-index: 7;
-}
-.mainSlider .main-content .content h2::before {
-    left: -75px;
-}
-.mainSlider .main-content .content h2::after {
-    right: -75px;
-}
-.mainSlider .main-content .content p {
-    text-align: center;
-    color: white;
-    line-height: 1.4;
-    font-weight: 600;
-}
-.mainSlider .main-content .content .btn-main {
-    margin-top: 2rem;
-    z-index: 34;
-    background-color: rgb(77, 194, 107);
-    font-family: Montserrat;
-    cursor: pointer;
-    outline: none;
-    box-shadow: none;
-    box-sizing: border-box;
-    height: auto;
-    width: auto;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    white-space: nowrap;
-    min-height: 0px;
-    min-width: 0px;
-    max-height: none;
-    max-width: none;
-    text-align: center;
-    line-height: 26px;
-    letter-spacing: 0px;
-    font-weight: 700;
-    font-size: 20px;
-    border-color: transparent;
-    padding: 15px 45px 14px;
-    border-radius: 25px;
-    transform-origin: 172.285px 27.4902px;
-    opacity: 1;
-    transform: translate(0px, 0px);
-    visibility: visible;
-    border-width: 0px;
-    border-style: none;
-}
-.mainSlider .main-content .content .btn-main:hover {
-    background-color: rgb(48 143 73);
-}
-/* Animation */
-.fade-in-text {
-    animation: fadeIn 3s;
-    -webkit-animation: fadeIn 5s;
-    -moz-animation: fadeIn 5s;
-    -o-animation: fadeIn 5s;
-    -ms-animation: fadeIn 5s;
-}
-@media (max-width: 768px) {
-    .mainSlider .main-content {
-        min-height: 70vh;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        background-color: #00000080;
-    }
-    .mainSlider .main-content .content h2 {
-        font-size: 2rem;
-    }
-    .mainSlider .main-content .content h2::before, 
-    .mainSlider .main-content .content h2::after {
-        width: 40px;
-        height: 6px;
-        top: 16px;
-    }
-    .mainSlider .main-content .content h2::before {
-        left: -50px;
-    }
-    .mainSlider .main-content .content h2::after {
-        right: -50px;
-    }
-    .mainSlider .main-content .content p {
-        font-size: 13px;
-    }
-    .mainSlider .main-content .content .btn-main {
-        padding: 10px 20px;
-        line-height: 1.2;
-    }
-    @keyframes moveDown {
-        0% {
-            top: -150px;
-            opacity: 0;
-        }
-        100% {
-            top: 0;
-            opacity: 1;
-        }
-    }
-}
-@keyframes fadeIn {
+  }
+  .mainSlider .main-content .content h2 {
+    font-size: 2rem;
+  }
+  .mainSlider .main-content .content h2::before,
+  .mainSlider .main-content .content h2::after {
+    width: 40px;
+    height: 6px;
+    top: 16px;
+  }
+  .mainSlider .main-content .content h2::before {
+    left: -50px;
+  }
+  .mainSlider .main-content .content h2::after {
+    right: -50px;
+  }
+  .mainSlider .main-content .content p {
+    font-size: 13px;
+  }
+  .mainSlider .main-content .content .btn-main {
+    padding: 10px 20px;
+    line-height: 1.2;
+  }
+  @keyframes moveDown {
     0% {
-        opacity: 0;
+      top: -150px;
+      opacity: 0;
     }
     100% {
-        opacity: 1;
+      top: 0;
+      opacity: 1;
     }
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 /* -------------------- */
 .h2-down {
-    position: relative;
-    top: 0px;
-    animation: moveDown 3s;
-    transition: 0.3s all ease-in-out;
-    /* animation-delay: 2s; */
+  position: relative;
+  top: 0px;
+  animation: moveDown 3s;
+  transition: 0.3s all ease-in-out;
+  /* animation-delay: 2s; */
 }
 
 @keyframes moveDown {
-    0% {
-        top: -250px;
-        opacity: 0;
-    }
-    100% {
-        top: 0;
-        opacity: 1;
-    }
+  0% {
+    top: -250px;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
 }
 /* -------------------- */
 .button-up {
-    position: relative;
-    top: 0px;
-    animation: moveUp 6s;
-    transition: 0.5s all ease-in-out;
+  position: relative;
+  top: 0px;
+  animation: moveUp 6s;
+  transition: 0.5s all ease-in-out;
 }
 
 @keyframes moveUp {
-    0% {
-        top: 600px;
-        opacity: 0;
-    }
-    100% {
-        top: 0;
-        opacity: 1;
-    }
+  0% {
+    top: 600px;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
 }
